BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/CRM_Movimenti__c.object-meta.xml
<CustomObject>
    <label>Movimenti</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Movimento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movimenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>