BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_Avere_PercScostTotImporti__c.field-meta.xml
<CustomField>
    <fullName>CRM_Avere_PercScostTotImporti__c</fullName>
    <formula>((( Importo_MovCC_TotAvere_InizioAnno__c / Imp_MovCC_TotAvere_StessoPeriodoAnnoPrec__c ) * 100) - 100)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% scostamenti importi avere</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>