BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifEffettUltimi12mesi__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifEffettUltimi12mesi__c</fullName>
    <label>Bonifici in uscita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>