BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstImpFisicoIniAnno__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstImpFisicoIniAnno__c</fullName>
    <label>Bonifici vs Est Imp Fisico Inizio Ann</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>