BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstImpTelemIniAnno__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstImpTelemIniAnno__c</fullName>
    <label>Bonifici Vs Estero Telem Imp Inizio Anno</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>