BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstNumFisicoIniAnno__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstNumFisicoIniAnno__c</fullName>
    <label>Bonifici vs Estero Num Fisico Inizio Ann</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>