BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstNumFisicoStessoPerAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstNumFisicoStessoPerAP__c</fullName>
    <label>Bonif Vs Estero Num Fisico Stesso Per AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>