BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstNumTelemFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstNumTelemFineAP__c</fullName>
    <label>Bonifici vs Est Num Telem Fine AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>