BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstNumTelemStessoPerAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstNumTelemStessoPerAP__c</fullName>
    <label>Bonifici vs Est Num Telem Stesso Per AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>