BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstVarFisicoFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstVarFisicoFineAP__c</fullName>
    <label>Bonifici vs Est Var Fisico Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>