BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifiVSEstVarFisicoStessoPerAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifiVSEstVarFisicoStessoPerAP__c</fullName>
    <label>Bonif vs Estero Var Fisico Stesso Per AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>