BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifPartImpFisicoIniAnno__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifPartImpFisicoIniAnno__c</fullName>
    <label>Bonifici Part Imp Fisico Inizio Anno</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>