BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifPartNumTelemIniAnno__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifPartNumTelemIniAnno__c</fullName>
    <label>Bonif Part Num Telem Inizio Anno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>