BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_BonifPartVarTelemFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_BonifPartVarTelemFineAP__c</fullName>
    <label>Bonifici Part Var Telem Fine AP</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>