BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_CarCreditoDaImpFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CarCreditoDaImpFineAP__c</fullName>
    <label>Dare - Imp. C. Credito - fine AP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>