BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_CarCreditoDaVarImpStePerAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CarCreditoDaVarImpStePerAP__c</fullName>
    <label>Dare - % var imp. C. Credito i.a. - spAP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>