BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_Cur_ProrPres_Ia__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cur_ProrPres_Ia__c</fullName>
    <label>Importo Prorogato / Presentato Ia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>