BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_Cur_VarScadPres_VarAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cur_VarScadPres_VarAP__c</fullName>
    <label>Importo Var Scad / Presentato VarAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>