BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_Dare_PercScostTotImporti__c.field-meta.xml
<CustomField>
    <fullName>CRM_Dare_PercScostTotImporti__c</fullName>
    <formula>((( Importo_MovCC_TotDare_InizioAnno__c /  Impo_MovCC_TotDare_StessoPeriodoAnnoPrec__c ) * 100 )-100)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% scostamento importi dare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>