BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_DataAggMovAutoliquidante__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggMovAutoliquidante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Agg. Movimenti Autoliquidante</label>
    <type>Date</type>
</CustomField>