BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_DataAggMovContoCorrente__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggMovContoCorrente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Agg. Movimenti Di Conto Corrente</label>
    <type>Date</type>
</CustomField>