BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_DataAggMovIncassiPagamentiCanale__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggMovIncassiPagamentiCanale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Agg. Mov Incassi Pagamenti Canale</label>
    <type>Date</type>
</CustomField>