BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_F_Cur_ProrVarScadPres_steAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_F_Cur_ProrVarScadPres_steAP__c</fullName>
    <formula>IF((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )!=0,
IF(
AND((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )&gt; 0,((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100) &gt;= 1000),
RIGHT(TEXT(FLOOR((((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100) ) / 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AND((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )&lt; 0,(((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*(-1))*100) &gt;= 1000),
RIGHT(TEXT(FLOOR((((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100) ) / 1000)), 3) &amp; &quot;.&quot; + RIGHT(TEXT(FLOOR((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100 )), 3),
&quot;&quot;) &amp;
IF(
AND((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )&lt; 0,((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*(-1))*100 &lt; 100),
RIGHT(TEXT(FLOOR(((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100 ))), 3),
IF (
AND((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c ) &lt; 0,((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*(-1))*100 &lt; 1000),
&quot;-&quot;+RIGHT(TEXT(FLOOR(((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100 ))), 3),
IF (
(CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )&gt; 0,
RIGHT(TEXT(FLOOR((((CRM_Cur_ProrPres_perAP__c + CRM_Cur_VarScadPres_perAP__c )*100) ))), 3),&quot;&quot;)
)
) + &quot;%&quot;,&quot;0%&quot;
)</formula>
    <label>Pror o Var Scad / Presentato Cur steAP</label>
    <type>Text</type>
</CustomField>