BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_F_Num_ProrVarScadPres_steAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_F_Num_ProrVarScadPres_steAP__c</fullName>
    <formula>IF((CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c) !=0,
IF(
(CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c)&gt;= 1000000000,
RIGHT(TEXT(FLOOR(((CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c) ) / 1000000000)), 3) &amp; &quot;.&quot;,
&quot;&quot;
) &amp;
IF(
(CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c)&gt;= 1000000,
RIGHT(TEXT(FLOOR(((CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c) ) / 1000000)), 3) &amp; &quot;.&quot;,
&quot;&quot;
) &amp;
IF(
(CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c)&gt;= 1000,
RIGHT(TEXT(FLOOR(((CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c) ) / 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;
) &amp;
RIGHT(TEXT(FLOOR(CRM_Num_ProrPres_perAP__c + CRM_Num_VarScadPres_perAP__c)), 3),
&quot;0&quot;
)</formula>
    <label>Pror o Var Scad / Presentato Num steAP</label>
    <type>Text</type>
</CustomField>