BPER/DEVF/force-app/main/default/objects/CRM_Movimenti__c/fields/CRM_F_Num_ProrVarScadPres_VarAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_F_Num_ProrVarScadPres_VarAP__c</fullName>
    <formula>IF((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c) !=0,
IF(
AND((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)&gt; 0,((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100) &gt;= 1000),
RIGHT(TEXT(FLOOR((((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100) ) / 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
AND((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)&lt; 0,(((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*(-1))*100) &gt;= 1000),
RIGHT(TEXT(FLOOR((((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100) ) / 1000)), 3) &amp; &quot;.&quot; + RIGHT(TEXT(FLOOR((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100 )), 3),
&quot;&quot;) &amp;
IF(
AND((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)&lt; 0,((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*(-1))*100 &lt; 100),
RIGHT(TEXT(FLOOR(((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100 ))), 3),
IF (
AND((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)&lt; 0,((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*(-1))*100 &lt; 1000),
&quot;-&quot;+RIGHT(TEXT(FLOOR(((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100 ))), 3),
IF (
(CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)&gt; 0,
RIGHT(TEXT(FLOOR((((CRM_Num_ProrPres_VarAP__c + CRM_Num_VarScadPres_VarAP__c)*100) ))), 3),&quot;&quot;)
)
),&quot;0&quot;
)</formula>
    <label>Pror o Var Scad / Presentato Num VarAP</label>
    <type>Text</type>
</CustomField>